# denylistScript

./: .flake8  .gitignore  .gitlab-ci.yml  CHANGELOG.md  Dockerfile  docker-compose.yml  pyproject.toml  tasks.py
ddos_deny_list/: denylist.py  helperfun.py
tests/fixtures/: get_denylist.json
